--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client-dashboard",
+  "homepage": "https://nnnpawar7.github.io/client-dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
